# devsecops-workshop

./: .gitignore  README.md
docs/: readme.md
docs/assets/: .$diagrams.drawio.bkp  diagrams.drawio
docs/inspect/: data-collection-manual.json  data-collection-terraform.json  resources.json  waagent-azcli.conf
presentation/: DevOps Workshop Challenge.pptx
src/azure-function/: log-write-function.py
src/mbt/: pyproject.toml  setup.sh
src/mbt/mbt/: __init__.py  command.py  oauth.py  options.py  terminal.py
src/mbt/tests/: common.py  readme.md  test_version.py
src/terraform/: .terraform.lock.hcl  azure-rg.tf  blob-storage.tf  cli-resources.tf  cli.tf  key-vault.tf  main.tf  monitor.tf  network-security-group-rules.tf  network.tf  virtual-machines.tf
terraform/: main.tf
