[tool.poetry]
name = "mbt"
version = "0.1.0"
description = "My Blob Tool for Azure Blob Storage"
authors = ["agu3rra <agu3rra@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
azure-storage-blob = "^12.19.0"
azure-identity = "^1.15.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Turns this into a poetry install CLI command
[tool.poetry.scripts]
mbt = 'mbt.command:main'
